Atualizando o properties para pegar variavel no dados do banco.